# ContextPilot

./: .gitignore  CONTRIBUTING.md  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: tests.yml
contextpilot/: __init__.py  __main__.py  compressor.py  cost_guard.py  embedder.py  extractor.py  retriever.py  scanner.py  server.py  store.py  summarizer.py
contextpilot/dashboard/: index.html
tests/: __init__.py  conftest.py  test_compressor.py  test_cost_guard.py  test_retriever.py  test_store.py  test_summarizer.py
